@@ -1,3 +1,10 @@
+2005-11-09  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	A m4/gecko.m4:
+
+	Distill the gecko detection logic into a macro package.
+
 2005-11-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/ephy-embed-persist.c: (ephy_embed_persist_class_init):
